<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/FrameDaTreta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DadosUsuario">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:drawable/screen_background_dark_transparent">

        <TextView
            android:id="@+id/txtValTreta"
            android:layout_width="82dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:text="TextView"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.569"
            app:layout_constraintStart_toEndOf="@+id/txttreta"
            app:layout_constraintTop_toBottomOf="@+id/txtValSorte" />

        <TextView
            android:id="@+id/txttreta"
            android:layout_width="191dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/lblTreta"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtsorte" />

        <TextView
            android:id="@+id/txtsorte"
            android:layout_width="191dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/lblSorte"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtintel" />

        <TextView
            android:id="@+id/txtValSorte"
            android:layout_width="82dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:text="TextView"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.569"
            app:layout_constraintStart_toEndOf="@+id/txttreta"
            app:layout_constraintTop_toBottomOf="@+id/txtvalInt" />

        <TextView
            android:id="@+id/txtvalInt"
            android:layout_width="82dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="TextView"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.569"
            app:layout_constraintStart_toEndOf="@+id/txttreta"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtintel"
            android:layout_width="191dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/lblInteligencia"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>